sync 2025-09-04